--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "opencv-python>=4.11.0.86",
     "pillow>=11.1.0",
     "pyside6>=6.8.2.1",
+    "scipy>=1.15.2",
     "torch>=2.6.0",
     "torchvision>=0.21.0",
 ]
