--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,3 +16,7 @@ dependencies = [
     "torch>=2.6.0",
     "torchvision>=0.21.0",
 ]
+
+[[tool.uv.index]]
+url = "https://pypi.tuna.tsinghua.edu.cn/simple"
+default = true
