--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,8 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "aiortc>=1.11.0",
+    "channels>=4.2.2",
     "django-cors-headers>=4.7.0",
     "django-ninja>=1.4.1",
     "django-ninja-extra>=0.30.0",
