--- a/client/package.json
+++ b/client/package.json
@@ -14,18 +14,21 @@
     "ionic:serve": "npm run dev -- --open"
   },
   "dependencies": {
+    "@capacitor/android": "^7.2.0",
+    "@capacitor/app": "latest",
+    "@capacitor/camera": "^7.0.1",
+    "@capacitor/core": "latest",
+    "@capacitor/haptics": "latest",
+    "@capacitor/keyboard": "latest",
+    "@capacitor/status-bar": "latest",
     "@ionic/vue": "^8.0.0",
     "@ionic/vue-router": "^8.0.0",
     "ionicons": "^7.0.0",
     "vue": "^3.3.0",
-    "vue-router": "^4.2.0",
-    "@capacitor/app": "latest",
-    "@capacitor/core": "latest",
-    "@capacitor/keyboard": "latest",
-    "@capacitor/haptics": "latest",
-    "@capacitor/status-bar": "latest"
+    "vue-router": "^4.2.0"
   },
   "devDependencies": {
+    "@capacitor/cli": "latest",
     "@vitejs/plugin-legacy": "^5.0.0",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vue/eslint-config-typescript": "^12.0.0",
@@ -38,7 +41,6 @@
     "typescript": "~5.6.2",
     "vite": "~5.2.0",
     "vitest": "^0.34.6",
-    "vue-tsc": "^2.1.10",
-    "@capacitor/cli": "latest"
+    "vue-tsc": "^2.1.10"
   }
 }
