--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "channels>=4.2.2",
     "django>=5.2",
     "django-cors-headers>=4.7.0",
+    "django-ninja>=1.4.1",
     "expecttest>=0.3.0",
     "numpy>=2.2.4",
     "opencv-python>=4.11.0.86",
