--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,9 @@
     "@capacitor/app": "latest",
     "@capacitor/camera": "^7.0.1",
     "@capacitor/core": "latest",
+    "@capacitor/filesystem": "^7.0.1",
     "@capacitor/haptics": "latest",
+    "@capacitor/http": "^0.0.2",
     "@capacitor/keyboard": "latest",
     "@capacitor/status-bar": "latest",
     "@ionic/vue": "^8.0.0",
